Fix appearance of a chat-only view: eliminate redundant gap between the vertical scrollbar and the right edge of a window.
FossilOrigin-Name: d3c0206ed2e1cc2b5d03e0821a0eb35513190067b4b0eb4f64a7b0e1380aeed2

--- a/src/style.chat.css
+++ b/src/style.chat.css
@@ -179,6 +179,7 @@ body.chat #load-msg-toolbar > div > button {
    the chat app. */
 body.chat.chat-only-mode{
   padding: 0;
+  margin: 0 auto;
 }
 body.chat #chat-button-settings {}
 /** Popup widget for the /chat settings. */
